name:                tetris-la
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:
license:             BSD3
license-file:        LICENSE
author:              Alex Stuart
maintainer:          example@example.com
copyright:           2021 Alex Stuart
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tetris-la
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bearriver,
                       containers,
                       fairybow,
                       lightarrow,
                       linear,
                       mtl,
                       optics,
                       sdl2,
                       sdl2-mixer,
                       text,
                       tf-random
  default-extensions:  Arrows
                       BangPatterns
                       ConstraintKinds
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       MultiWayIf
                       OverloadedStrings
                       PartialTypeSignatures
                       RankNTypes
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeSynonymInstances
                       ScopedTypeVariables 
  other-modules:       Tetris.Action
                       Tetris.Grid
                       Tetris.Piece